# willbry

./: INTEGRATION_REPORT.md
willbry-backend/: .env.example  .gitignore  Cargo.toml  README.md
willbry-backend/migrations/: 001_create_users.sql  002_create_products.sql  003_create_orders.sql  004_create_blog.sql  005_create_chat.sql  007_create_inquiries.sql  008_create_farmers.sql  009_create_prices.sql  010_create_farm_profiles.sql  011_create_bookings.sql  012_create_gallery.sql  013_create_ai_config.sql
willbry-backend/src/: README.md  config.rs  errors.rs  main.rs
willbry-backend/src/db/: pool.rs
willbry-backend/src/handlers/: ai_config.rs  analytics.rs  auth.rs  blog.rs  bookings.rs  chat.rs  farm_profile.rs  farmers.rs  gallery.rs  inquiry.rs  mod.rs  orders.rs  prices.rs  products.rs  resources.rs  users.rs
willbry-backend/src/middleware/: admin.rs  auth.rs
willbry-backend/src/models/: ai_config.rs  blog.rs  booking.rs  chat.rs  farm_profile.rs  farmer.rs  inquiry.rs  mod.rs  order.rs  price.rs  product.rs  resource.rs  user.rs
willbry-backend/src/services/: email.rs  groq.rs  jwt.rs  mod.rs  r2.rs
willbry-frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
willbry-frontend/src/: App.css  App.tsx  index.css  main.tsx
willbry-frontend/src/context/: AuthContext.tsx  CartContext.tsx
willbry-frontend/src/hooks/: useApi.ts  useAuth.ts  useCart.ts  useChat.ts
willbry-frontend/src/lib/: api.ts  auth.ts  utils.ts  validators.ts
willbry-frontend/src/router/: AdminRoute.tsx  index.tsx
(+82 files in other folders)
